Successful DI refactor First try at logging

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,20 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HeyDo-A7E83EF6-ABCF-4136-8A70-ED0E93C2A708;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Hangfire": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
+
+//{
+//  "ConnectionStrings": {
+//    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HeyDo-A7E83EF6-ABCF-4136-8A70-ED0E93C2A708;Trusted_Connection=True;MultipleActiveResultSets=true"
+//  },
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*"
+//}
