--- a/HeyDo.csproj
+++ b/HeyDo.csproj
@@ -11,8 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="1.9.0" />
+    <PackageReference Include="FireSharp" Version="2.0.4" />
     <PackageReference Include="Hangfire" Version="1.7.6" />
     <PackageReference Include="Hangfire.Core" Version="1.7.6" />
+    <PackageReference Include="Hangfire.Firebase" Version="1.0.3" />
     <PackageReference Include="HangFire.SqlServer" Version="1.7.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
