--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "Hangfire": "Information"
+      "Microsoft": "Warning",
+      "System": "Warning",
+      "Default": "Warning"
     }
   }
 }
