Updated how loglevel is read from configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,11 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Microsoft": "Warning",
+      "Default": "Warning",
       "System": "Warning",
-      "Default": "Warning"
+      "Microsoft": "Warning",
+      "Hangfire": "Warning"
     }
   }
 }
